2009-03-20  higepon  <higepon@users.sourceforge.jp>

        * scanner.re (Scanner): Fixed the parse of bad string. (thanks to naoya_t)

2009-03-19  higepon  <higepon@users.sourceforge.jp>

        * Patch for build on Windows with VC++ by herumi.

2009-03-18  higepon  <higepon@users.sourceforge.jp>

        * Boehm GC 7.1alpha3 => 7.1

        * TranscodedTextualInputPort.cpp (TranscodedTextualInputPort::getLineNo): Fixed the bug of line number.

        * Object-inl.h (Object::makeCompilerInstruction): Now Mosh works with normal switch/case.

        * Removed getDatumOld

        * Not to use ucs4string::data()

        * Removed unused gc_vector definition.

        * Renamd files and*-let => and-let.

        * r6rs-test-suite : Passes io/port tests.

        * TextualInputPort.cpp (getLine): Fixed the bug of get-line.

        * PortProcedures.cpp : Added TRY/CATCH to put-string.

        * Latin1Codec.cpp (Latin1Codec::getChar): Fixed.

2009-03-17  higepon  <higepon@users.sourceforge.jp>

        * TextualOutputPort.cpp (TextualOutputPort::putDatum): put-datum with inline hex escaped symbol (May be not enough).

        * Reader.y : Accepted reading inline hex escaped symbol.

2009-03-17  kokosabu  <kokosabu@gmail.com>

        * UTF8Codec.cpp : fixed putChar's error-handling.

        * Latin1Codec.cpp : Added encode/decode error-handling.

2009-03-17  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp : Added put-datum.

        * StandardOutputPort.h (close): Not to close(stdout).

        * Replace the invalid MACRO names like __SCHEME__ to SCHEME_.(thanks to herumi-san).

        * scheme.h (UC): Force the order of operator L and ##. (thanks to herumi-san).

        * compiler.scm (iform-count-size-upto): Added cond clause for $RECEIVE.

        * library.scm (call-with-bytevector-output-port): Fixed wrong arguments.

        * Fixed bytevector-output-port's positions.

        * Fixed the problems on UTF16.
