@@ -1,31 +1,30 @@
 MOSH=../mosh
 
 test:
+	$(MOSH) tests/r6rs/run/io/ports.sps
+	$(MOSH) tests/r6rs/run/io/simple.sps
+	$(MOSH) tests/r6rs/run/syntax-case.sps
+	$(MOSH) tests/r6rs/run/unicode.sps
+	$(MOSH) tests/r6rs/run/exceptions.sps
+	$(MOSH) tests/r6rs/run/contrib.sps
+	$(MOSH) tests/r6rs/run/mutable-strings.sps
+	$(MOSH) tests/r6rs/run/mutable-pairs.sps
+	$(MOSH) tests/r6rs/run/contrib.sps
+	$(MOSH) tests/r6rs/run/programs.sps
+	$(MOSH) tests/r6rs/run/control.sps
+	$(MOSH) tests/r6rs/run/hashtables.sps
+	$(MOSH) tests/r6rs/run/records/procedural.sps
+	$(MOSH) tests/r6rs/run/lists.sps
+	$(MOSH) tests/r6rs/run/enums.sps
+	$(MOSH) tests/r6rs/run/sorting.sps
+	$(MOSH) tests/r6rs/run/records/syntactic.sps
+	$(MOSH) tests/r6rs/run/bytevectors.sps
+	$(MOSH) tests/r6rs/run/arithmetic/bitwise.sps
+	$(MOSH) tests/r6rs/run/arithmetic/fixnums.sps
+	$(MOSH) tests/r6rs/run/arithmetic/flonums.sps
+	$(MOSH) tests/r6rs/run/reader.sps
+	$(MOSH) tests/r6rs/run/conditions.sps
+	$(MOSH) tests/r6rs/run/r5rs.sps
+	$(MOSH) tests/r6rs/run/eval.sps
+	$(MOSH) tests/r6rs/run/base.sps
 	$(MOSH) tests/r6rs/run-via-eval.sps
-# 	$(MOSH) tests/r6rs/run/io/ports.sps
-# 	$(MOSH) tests/r6rs/run/io/simple.sps
-# 	$(MOSH) tests/r6rs/run/syntax-case.sps
-# 	$(MOSH) tests/r6rs/run/unicode.sps
-# 	$(MOSH) tests/r6rs/run/exceptions.sps
-# 	$(MOSH) tests/r6rs/run/contrib.sps
-# 	$(MOSH) tests/r6rs/run/mutable-strings.sps
-# 	$(MOSH) tests/r6rs/run/mutable-pairs.sps
-# 	$(MOSH) tests/r6rs/run/contrib.sps
-# 	$(MOSH) tests/r6rs/run/programs.sps
-# 	$(MOSH) tests/r6rs/run/control.sps
-# 	$(MOSH) tests/r6rs/run/hashtables.sps
-# 	$(MOSH) tests/r6rs/run/records/procedural.sps
-# 	$(MOSH) tests/r6rs/run/lists.sps
-# 	$(MOSH) tests/r6rs/run/enums.sps
-# 	$(MOSH) tests/r6rs/run/sorting.sps
-# 	$(MOSH) tests/r6rs/run/records/syntactic.sps
-# 	$(MOSH) tests/r6rs/run/bytevectors.sps
-# 	$(MOSH) tests/r6rs/run/arithmetic/bitwise.sps
-# 	$(MOSH) tests/r6rs/run/arithmetic/fixnums.sps
-# 	$(MOSH) tests/r6rs/run/arithmetic/flonums.sps
-# 	$(MOSH) tests/r6rs/run/reader.sps
-# 	$(MOSH) tests/r6rs/run/conditions.sps
-# 	$(MOSH) tests/r6rs/run/r5rs.sps
-# 	$(MOSH) tests/r6rs/run/eval.sps
-# 	$(MOSH) tests/r6rs/run/base.sps
-
